# leadsheet-utility

./: CLAUDE.md  DIARY.md  README.md  SPEC.md  TODO.md  pyproject.toml  skills-lock.json
.claude/: settings.local.json
.claude/memory/: MEMORY.md  feedback_spec_md.md
.claude/skills/jazz-music-theory/: SKILL.md
data/leadsheets/: 26_2.meta.json  26_2.tsv  all_the_things_you_are.meta.json  autumn_leaves.meta.json  autumn_leaves.tsv  fly_me_to_the_moon.meta.json  fly_me_to_the_moon.tsv  inner_urge.meta.json  inner_urge.tsv  misty.meta.json  nefertiti.meta.json  nefertiti.tsv  oleo.meta.json  oleo.tsv  sandu.meta.json  satin_doll.meta.json  satin_doll.tsv  stella_by_starlight.meta.json  stella_by_starlight.tsv  summertime.meta.json  summertime.tsv  sunny_side_of_the_street.meta.json  sunny_side_of_the_street.tsv  take_the_a_train.meta.json
playground/: show_guide_tone_line.py
songs/: all_the_things_you_are.txt  misty.txt  oleo.txt  sandu.txt  take_the_a_train.txt
src/leadsheet_utility/: __main__.py  main.py
src/leadsheet_utility/backing/: __init__.py  comping.py  comping_rhythms.py  comping_voicings.py  events.py  renderer.py  walking_bass.py
src/leadsheet_utility/gui/: __init__.py  hud.py  input.py
src/leadsheet_utility/harmony/: __init__.py  constants.py  core.py
src/leadsheet_utility/leadsheet/: models.py  parser.py
src/leadsheet_utility/timeline/: __init__.py  engine.py
tests/: test_drums.py  test_harmony.py  test_harmony_fixtures.py  test_main.py  test_parser.py  test_timeline.py  test_walking_bass.py
tests/fixtures/harmony/: 26_2.expected.json  (+6 more)
(+2 files in other folders)
