[project]
name = "leadsheet-utility"
version = "0.1.0"
description = "AR project to learn to improvise over swing leadsheets with a projector-augmented piano."
authors = [
    {name = "Alexandre Riedo",email = "alexandre.riedo@etu.unige.ch"}
]
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "pygame-ce (>=2.5.7,<3.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "pyfluidsynth (>=1.3.4,<2.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.2,<10.0.0"
ruff = ">=0.15.8,<0.16.0"


[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
